--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,57 @@ li, ul {
   font-weight: 500;
 }
 
+.info-about {
+  max-width: 3440px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  position: absolute;
+  z-index: 3;
+}
+.info-about .about-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.info-about .about-box .about-text {
+  height: 340px;
+  margin-left: 38px;
+}
+.info-about .about-box .about-text h1 {
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+  margin-top: 0px;
+}
+.info-about .about-box .about-text hr {
+  width: 55px;
+  height: 4px;
+  background-color: #FFE048;
+  border: none;
+  list-style: none;
+  margin-top: -5px;
+  margin-bottom: 22px;
+}
+.info-about .about-box .about-text p {
+  height: 265px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 2px;
+  color: #fff;
+  opacity: 1;
+  text-transform: uppercase;
+  overflow: auto;
+}
+
 .container {
   max-width: 1920px;
   width: 100%;
@@ -46,6 +97,9 @@ li, ul {
   height: 100%;
   padding: 10px 15px;
   background-color: rgba(0, 0, 0, 0.65);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .content-top {
@@ -230,9 +284,7 @@ li, ul {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin-bottom: 20px;
-  margin-top: 120px;
-  padding: 0 20px;
+  padding: 0 20px 20px;
   position: relative;
 }
 .content-bottom .balance {
@@ -489,6 +541,14 @@ li, ul {
   .content-bottom_right {
     transform: scale(0.9);
   }
+
+  .info-about .about-box .about-text h1 {
+    font-size: 28px;
+    line-height: 32px;
+  }
+  .info-about .about-box .about-text p {
+    letter-spacing: 1.5px;
+  }
 }
 @media (max-width: 1024px) and (max-height: 768px) {
   .content-top {
@@ -525,5 +585,44 @@ li, ul {
   .content-bottom_right {
     transform: scale(0.8);
     margin-bottom: 10px;
+  }
+
+  .info-about .about-box img {
+    width: 400px;
+    height: 280px;
+  }
+  .info-about .about-box .about-text {
+    height: 280px;
+  }
+  .info-about .about-box .about-text h1 {
+    font-size: 28px;
+    line-height: 32px;
+  }
+  .info-about .about-box .about-text p {
+    height: 204px;
+    letter-spacing: 1.5px;
+  }
+}
+@media (max-width: 800px) and (max-height: 600px) {
+  .info-about .about-box img {
+    width: 300px;
+    height: 200px;
+  }
+  .info-about .about-box .about-text {
+    height: 200px;
+    margin-left: 20px;
+  }
+  .info-about .about-box .about-text h1 {
+    font-size: 20px;
+    line-height: 32px;
+  }
+  .info-about .about-box .about-text hr {
+    height: 2px;
+    margin-bottom: 10px;
+  }
+  .info-about .about-box .about-text p {
+    font-size: 12px;
+    height: 145px;
+    letter-spacing: 1px;
   }
 }
