--- a/scss/style.sass
+++ b/scss/style.sass
@@ -36,6 +36,56 @@ li, ul
   font-size: 14px
   font-weight: 500
 
+.info-about
+  max-width: 3440px
+  width: 100%
+  height: 100vh
+  background: rgba(0, 0, 0, 0.3)
+  -webkit-backdrop-filter: blur(20px)
+  backdrop-filter: blur(20px)
+  position: absolute
+  z-index: 3
+
+  .about-box
+    width: 100%
+    height: 100%
+    display: flex
+    justify-content: center
+    align-items: center
+
+    .about-text
+      height: 340px
+      margin-left: 38px
+
+      h1
+        font-size: 31px
+        font-weight: 500
+        line-height: 34px
+        letter-spacing: 2px
+        text-transform: uppercase
+        color: #fff
+        margin-top: 0px
+
+      hr
+        width: 55px
+        height: 4px
+        background-color: #FFE048
+        border: none
+        list-style: none
+        margin-top: -5px
+        margin-bottom: 22px
+
+      p
+        height: 265px
+        font-size: 14px
+        font-weight: 500
+        line-height: 30px
+        letter-spacing: 2px
+        color: #fff
+        opacity: 1
+        text-transform: uppercase
+        overflow: auto
+
 .container
   max-width: 1920px
   width: 100%
@@ -43,6 +93,9 @@ li, ul
   height: 100%
   padding: 10px 15px
   background-color: rgba(0, 0, 0, 0.65)
+  display: flex
+  flex-direction: column
+  justify-content: space-between
 
 .content-top
   width: 100%
@@ -226,9 +279,7 @@ li, ul
   display: flex
   align-items: flex-end
   justify-content: space-between
-  margin-bottom: 20px
-  margin-top: 120px
-  padding: 0 20px
+  padding: 0 20px 20px
   position: relative
 
   .balance
@@ -477,6 +528,14 @@ li, ul
   .content-bottom_right
     transform: scale(0.9)
 
+  .info-about .about-box .about-text
+    h1
+      font-size: 28px
+      line-height: 32px
+
+    p
+      letter-spacing: 1.5px
+
 @media (max-width: 1024px) and (max-height: 768px)
   .content-top
     max-height: 310px
@@ -508,3 +567,42 @@ li, ul
   .content-bottom_right
     transform: scale(0.8)
     margin-bottom: 10px
+
+  .info-about .about-box
+    img
+      width: 400px
+      height: 280px
+
+    .about-text
+      height: 280px
+
+      h1
+        font-size: 28px
+        line-height: 32px
+
+      p
+        height: 204px
+        letter-spacing: 1.5px
+
+@media (max-width: 800px) and (max-height: 600px)
+  .info-about .about-box
+    img
+      width: 300px
+      height: 200px
+
+    .about-text
+      height: 200px
+      margin-left: 20px
+
+      h1
+        font-size: 20px
+        line-height: 32px
+
+      hr
+        height: 2px
+        margin-bottom: 10px
+
+      p
+        font-size: 12px
+        height: 145px
+        letter-spacing: 1px
