--- a/scss/style.sass
+++ b/scss/style.sass
@@ -45,6 +45,7 @@ li, ul
   backdrop-filter: blur(20px)
   position: absolute
   z-index: 3
+  display: none
 
   .about-box
     width: 100%
@@ -450,32 +451,36 @@ li, ul
       &:active
         transform: scale(0.9)
 
-  .content-bottom_right .buttons
-    display: flex
-    align-items: flex-end
+  .content-bottom_right
+    position: relative
+    z-index: 7
 
-    .button
-      width: 83px
-      height: 72px
-      border: none
-      line-height: 1px
-      background: rgba(255, 255, 255, 0.15)
-      -webkit-backdrop-filter: blur(35px)
-      backdrop-filter: blur(35px)
-      border-radius: 10px
-      transform: skewX(-15deg)
-      outline: none
-      cursor: pointer
+    .buttons
+      display: flex
+      align-items: flex-end
 
-      img
-        transform: skewX(15deg)
+      .button
+        width: 83px
+        height: 72px
+        border: none
+        line-height: 1px
+        background: rgba(255, 255, 255, 0.15)
+        -webkit-backdrop-filter: blur(35px)
+        backdrop-filter: blur(35px)
+        border-radius: 10px
+        transform: skewX(-15deg)
+        outline: none
+        cursor: pointer
 
-      &:hover
-        background: rgba(255, 255, 255, 0.35)
-        border: 1px solid rgba(255, 255, 255, 0.65)
+        img
+          transform: skewX(15deg)
 
-    .btn-about
-      margin-right: 15px
+        &:hover
+          background: rgba(255, 255, 255, 0.35)
+          border: 1px solid rgba(255, 255, 255, 0.65)
+
+      .btn-about
+        margin-right: 15px
 
 @media (max-width: 1600px) and (max-height: 900px)
   .content-top
