--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,7 @@ li, ul {
     backdrop-filter: blur(20px);
     position: absolute;
     z-index: 3;
+    display: none;
     .about-box {
         width: 100%;
         height: 100%;
@@ -482,6 +483,8 @@ li, ul {
         }
     }
     .content-bottom_right{
+        position: relative;
+        z-index: 7;
         .buttons {
             display: flex;
             align-items: flex-end;
